<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE0B9" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4285f4"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_date_insert"
                style="@style/CodeFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/lbl_date"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/img_btn_date_insert"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/selectdate"
                android:src="@drawable/calendar_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_diary_title_insert"
                style="@style/CodeFont.Red"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lbl_diary_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txt_diary_title_insert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="9"
                android:background="#ffffff"
                android:ellipsize="end"
                android:inputType="text|textShortMessage"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/lbl_diary_content_insert"
                style="@style/CodeFont.Red"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lbl_diary_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

                <EditText
                    android:id="@+id/txt_diary_content_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_location_insert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/location"
                android:drawableStart="@android:drawable/ic_dialog_map"
                android:gravity="center_vertical"
                android:text="@string/lbl_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtRecording"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recording"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.40"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_foto_capture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_take_a_picture_insert" >
                </Button>

                <Button
                    android:id="@+id/btn_pick_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_image_from_phone_insert" >
                </Button>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnRecordAudio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/record" />

                    <Button
                        android:id="@+id/btnPlayAudio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/btn_audio_record_listen_insert" >
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_insert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hello_world"
                android:src="@android:drawable/ic_menu_camera" >
            </ImageView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_diary_save"
            style="@style/CodeFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/add"
            android:drawableRight="@drawable/add"
            android:text="@string/btn_save_diary" />
    </LinearLayout>

</ScrollView>