<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE0B9" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4285f4"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_date_update"
                style="@style/CodeFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/lbl_date"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/img_btn_date_update"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/selectdate"
                android:src="@drawable/calendar_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_diary_title_update"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lbl_diary_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txt_diary_title_update"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_weight="9"
                android:background="#ffffff"
                android:ellipsize="end"
                android:inputType="text|textShortMessage"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_diary_content_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_diary_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txt_diary_content_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:background="#ffffff"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_location_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/location"
                android:drawableStart="@drawable/location"
                android:gravity="center_vertical"
                android:text="@string/lbl_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.40"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_foto_capture_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_take_a_picture_insert" >
                </Button>

                <Button
                    android:id="@+id/btn_pick_gallery_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_image_from_phone_insert" >
                </Button>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnRecordAudio_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/record" />

                    <Button
                        android:id="@+id/btnPlayAudio_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/btn_audio_record_listen_insert" >
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hello_world"
                android:src="@android:drawable/ic_menu_camera" >
            </ImageView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_diary_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/update"
            android:drawableRight="@drawable/update"
            android:text="@string/btn_update_diary" />
    </LinearLayout>

</ScrollView>